--- a/style.css
+++ b/style.css
@@ -133,8 +133,8 @@ nav {
     margin-top: 30px;
     margin-bottom: 30px;
     /* box-shadow: 10px 10px 5px grey; */
-      margin-left: 40%; 
-    margin-right: 40%;  
+      /* margin-left: 40%; 
+    margin-right: 40%;   */
     border: solid rgb(39, 195, 96) 5px; 
     
 }
@@ -268,3 +268,69 @@ nav {
     color: black;
     background-color: rgb(204, 163, 51);
 }
+
+@media(max-width: 2560px) {
+    #form-container {
+        margin-left: 40%;
+        margin-right: 40%;
+    }
+}
+
+@media(max-width: 1030px) {
+    #form-container {
+        margin-left: 30%; 
+        margin-right: 30%; 
+    }
+}
+
+@media(max-width: 430px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    nav {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #main_text {
+        padding: 30px;
+    }
+
+} 
+
+
+
+@media(max-width: 330px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    nav {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #main_text{
+        font-size: 18px;
+        display: flex;
+        flex-direction: column;
+        padding: 30px;
+    }
+
+   
+
+    #contact_text {
+        padding: 1px;
+        font-size: 100%;
+    }
+}
+
