--- a/style.css
+++ b/style.css
@@ -301,6 +301,11 @@ nav {
         padding: 30px;
     }
 
+    #form-container {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
 } 
 
 
